tests/e2e/dns-manipulation/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
      app.kubernetes.io/managed-by: nimbus-netpol
    name: dns-manipulation-binding-dnsmanipulation
    ownerReferences:
    - apiVersion: intent.security.nimbus.com/v1
      blockOwnerDeletion: true
      controller: true
      kind: NimbusPolicy
      name: dns-manipulation-binding
spec:
    egress:
    - ports:
      - port: 53
        protocol: UDP
      - port: 53
        protocol: TCP
      to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: kube-system
        podSelector:
          matchLabels:
            k8s-app: kube-dns
    podSelector:
      matchLabels:
        app: nginx
    policyTypes:
    - Egress
