tests/e2e/dns-manipulation/updated-netpol.yaml
# SPDX-License-Identifier: Apache-2.0
# Copyright 2023 Authors of Nimbus

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
      app.kubernetes.io/managed-by: nimbus-netpol
    name: dns-manipulation-binding-dnsmanipulation
spec:
    egress:
    - ports:
      - port: 53
        protocol: UDP
      - port: 53
        protocol: TCP
      to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: kube-system
        podSelector:
          matchLabels:
            k8s-app: kube-dns
    podSelector:
      matchLabels:
        env: backend
    policyTypes:
    - Egress
