tests/e2e/dns-manipulation/nimbus-policy-assert.yaml
# SPDX-License-Identifier: Apache-2.0
# Copyright 2023 Authors of Nimbus

apiVersion: intent.security.nimbus.com/v1
kind: NimbusPolicy
metadata:
  name: dns-manipulation-binding
  ownerReferences:
    - apiVersion: intent.security.nimbus.com/v1
      blockOwnerDeletion: true
      controller: true
      kind: SecurityIntentBinding
      name: dns-manipulation-binding
      # Since UID is not predictable so don't add it.
spec:
  rules:
    - description: An adversary can manipulate DNS requests to redirect network traffic
        and potentially reveal end user activity.
      id: dnsManipulation
      rule:
        action: Block
  selector:
    matchLabels:
      app: nginx
